Add protected Policy Expert route
